--- a/index.html
+++ b/index.html
@@ -1,3 +1,33 @@
-<p>
-  <a href="menu.html">로그인</a>
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="/lock.ico" type="image/x-icon">
+    <link rel="icon" href="/lock.ico" type="image/x-icon">
+    <title>LOGIN</title>
+  </head>
+
+  <body>
+    <div align="center">
+      <br>
+      <p class="title">POVI Pay</p>
+      <hr color="rgb(102, 102, 92)" class="line">
+
+      <div class="login-box" align="center"> 
+        <form action="/menu.html" method="GET">
+          <input type="text" id="user-id" class="text" placeholder="ID">
+          <input type="password" id="user-password" class="text" placeholder="Password">
+          <input type="submit" align="center" value="LOGIN" class="submit"> 
+        </form>  
+      </div>
+    </div>
+    
+    <div align="center" class="footer">
+      <img src="logo_1802/POSTECH_로고_02.jpg" alt="POSTECH" width="30%">
+      <br><br>
+    </div>
+  </body>
+
+</html>
