--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     
     <div align="center" class="footer">
-      <img src="logo_1802/POSTECH_로고_02.jpg" alt="POSTECH" width="30%">
+      <img src="POSTECH_로고_02.jpg" alt="POSTECH" width="30%">
       <br><br>
     </div>
   </body>
