--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="/main.css">
-    <link rel="shortcut icon" href="/lock.ico" type="image/x-icon">
-    <link rel="icon" href="/lock.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="image/lock.ico" type="image/x-icon">
+    <link rel="icon" href="image/lock.ico" type="image/x-icon">
     <title>LOGIN</title>
   </head>
 
@@ -25,7 +25,7 @@
     </div>
     
     <div align="center" class="footer">
-      <img src="POSTECH_로고_02.jpg" alt="POSTECH" width="30%">
+      <img src="image/POSTECH_로고_02.jpg" alt="POSTECH" width="30%">
       <br><br>
     </div>
   </body>
