--- a/printer.html
+++ b/printer.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" href="/printer.ico" type="image/x-icon">
-    <link rel="icon" href="/printer.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="shortcut icon" href="image/printer.ico" type="image/x-icon">
+    <link rel="icon" href="image/printer.ico" type="image/x-icon">
     <title>프린터 이용</title>
   </head>
 
@@ -20,13 +20,13 @@
         <tr height="160px">
           <td align="center" bgcolor="#EEEEF0" class="block">
             <font style="font-size: 16px;">청암 5층 1번</font><br><br>
-            <img src="printer2.png" alt="Image Error" height="60px"><br>
+            <img src="image/printer2.png" alt="Image Error" height="60px"><br>
             <font style="font-size: 12px;">상태</font><br>
             <font style="font-size: 16px;">종이없음</font>
           </td>
           <td align="center" bgcolor="#EEEEF0" class="block">
             <font style="font-size: 16px;">청암 5층 2번</font><br><br>
-            <img src="printer2.png" alt="Image Error" height="60px"><br>
+            <img src="image/printer2.png" alt="Image Error" height="60px"><br>
             <font style="font-size: 12px;">상태</font><br>
             <font style="font-size: 16px;">정상</font>
           </td>
@@ -34,13 +34,13 @@
         <tr height="160px">
           <td align="center" bgcolor="#EEEEF0" class="block">
             <font style="font-size: 16px;">RC 1층 1번</font><br><br>
-            <img src="printer2.png" alt="Image Error" height="60px"><br>
+            <img src="image/printer2.png" alt="Image Error" height="60px"><br>
             <font style="font-size: 12px;">상태</font><br>
             <font style="font-size: 16px;">고장</font>
           </td>
           <td align="center" bgcolor="#EEEEF0" class="block">
             <font style="font-size: 16px;">RC층 1층 2번</font><br><br>
-            <img src="printer2.png" alt="Image Error" height="60px"><br>
+            <img src="image/printer2.png" alt="Image Error" height="60px"><br>
             <font style="font-size: 12px;">상태</font><br>
             <font style="font-size: 16px;">정상</font>
           </td>
@@ -50,7 +50,7 @@
     </div>
 
     <div align="center" class="footer">
-      <img src="logo_1802/POSTECH_로고_02.jpg" alt="POSTECH" width="30%">
+      <img src="image/POSTECH_로고_02.jpg" alt="POSTECH" width="30%">
       <br><br>
     </div>
   </body>
