--- a/laundry.html
+++ b/laundry.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" href="/laundry.ico" type="image/x-icon">
-    <link rel="icon" href="/laundry.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="shortcut icon" href="image/laundry.ico" type="image/x-icon">
+    <link rel="icon" href="image/laundry.ico" type="image/x-icon">
     <title>세탁기 이용</title>
   </head>
 
@@ -24,14 +24,14 @@
           <tr height="160px">
             <td align="center" bgcolor="#EEEEF0" class="block">
               <font style="font-size: 16px;">RC 1층 0번</font><br>
-              <img src="laundry.png" alt="Image Error" height="60px">
+              <img src="image/laundry.png" alt="Image Error" height="60px">
               <br>
               <font style="font-size: 12px;">남은 시간</font><br>
               <font style="font-size: 16px;">0시간 00분</font>
             </td>
             <td align="center" bgcolor="#EEEEF0" class="block">
               <font style="font-size: 16px;">RC 1층 0번</font><br>
-              <img src="laundry.png" alt="Image Error" height="60px">
+              <img src="image/laundry.png" alt="Image Error" height="60px">
               <br>
               <font style="font-size: 12px;">남은 시간</font><br>
               <font style="font-size: 16px;">0시간 00분</font>
@@ -40,14 +40,14 @@
           <tr height="160px">
             <td align="center"bgcolor="#EEEEF0" class="block">
               <font style="font-size: 16px;">RC 1층 0번</font><br>
-              <img src="laundry.png" alt="Image Error" height="60px">
+              <img src="image/laundry.png" alt="Image Error" height="60px">
               <br>
               <font style="font-size: 12px;">남은 시간</font><br>
               <font style="font-size: 16px;">0시간 00분</font>
             </td>
             <td align="center" bgcolor="#EEEEF0" class="block">
               <font style="font-size: 16px;">RC 1층 0번</font><br>
-              <img src="laundry.png" alt="Image Error" height="60px">
+              <img src="image/laundry.png" alt="Image Error" height="60px">
               <br>
               <font style="font-size: 12px;">남은 시간</font><br>
               <font style="font-size: 16px;">0시간 00분</font>
@@ -56,14 +56,14 @@
           <tr height="160px">
             <td align="center" bgcolor="#EEEEF0" class="block">
               <font style="font-size: 16px;">RC 1층 0번</font><br>
-              <img src="laundry.png" alt="Image Error" height="60px">
+              <img src="image/laundry.png" alt="Image Error" height="60px">
               <br>
               <font style="font-size: 12px;">남은 시간</font><br>
               <font style="font-size: 16px;">0시간 00분</font>
             </td>
             <td align="center" bgcolor="#EEEEF0" class="block">
               <font style="font-size: 16px;">RC 1층 0번</font><br>
-              <img src="laundry.png" alt="Image Error" height="60px">
+              <img src="image/laundry.png" alt="Image Error" height="60px">
               <br>
               <font style="font-size: 12px;">남은 시간</font><br>
               <font style="font-size: 16px;">0시간 00분</font>
@@ -76,7 +76,7 @@
     </div>
     
     <div align="center" class="footer">
-      <img src="logo_1802/POSTECH_로고_02.jpg" alt="POSTECH" width="30%">
+      <img src="image/POSTECH_로고_02.jpg" alt="POSTECH" width="30%">
       <br><br>
     </div>
   </body>
