--- a/pay.html
+++ b/pay.html
@@ -1,15 +1,44 @@
-<p>
-  <a href="#">세탁기</a>
-</p>
-<p>
-  <a href="#">프린트</a>
-</p>
-<p>
-  <a href="#">학식</a>
-</p>
-<p>
-  <a href="#">편의점</a>
-</p>
-<p>
-  <a href="menu.html">뒤로가기</a>
-</p>
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>POVI Pay 결제</title>
+  </head>
+  <body>
+    <style>
+      .pay_title
+      {
+        margin-top : 150px;
+        font-size : 80px;
+        margin-bottom : 150px;
+      }
+      .back
+      {
+        font-size : 50px;
+      }
+    </style>
+    
+    <h1 class="pay_title" align="center">결제 항목 선택</h1>
+    
+    <p align="center">
+      <a href="laundry.html">
+        <img src="image/pay/세탁기.png" alt="세탁기" width=40%> 
+      </a>
+      <a href="printer.html">
+        <img src="image/pay/프린터.png" alt="프린터" width=40%> 
+      </a>
+    </p>
+    <p align="center">
+      <a href="cafeteria">
+        <img src="image/pay/학생식당.png" alt="학생식당" width=40%> 
+      </a>
+      <a href="store.html">
+        <img src="image/pay/편의점.png" alt="편의점" width=40%> 
+      </a>
+    </p>
+    <p class="back" align="center">
+      <a href="menu.html">뒤로가기</a>
+    </p>
+  </body>
+</html>
