--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <hr color="rgb(102, 102, 92)" class="line">
 
       <div class="login-box" align="center"> 
-        <form action="/menu.html" method="GET">
+        <form action="menu.html" method="GET">
           <input type="text" id="user-id" class="text" placeholder="ID">
           <input type="password" id="user-password" class="text" placeholder="Password">
           <input type="submit" align="center" value="LOGIN" class="submit"> 
