--- a/pay.html
+++ b/pay.html
@@ -23,18 +23,18 @@
     
     <p align="center">
       <a href="laundry.html">
-        <img src="image/pay/세탁기.png" alt="세탁기" width=40%> 
+        <img src="image/pay/1.png" alt="세탁기" width=40%> 
       </a>
       <a href="printer.html">
-        <img src="image/pay/프린터.png" alt="프린터" width=40%> 
+        <img src="image/pay/3.png" alt="프린터" width=40%> 
       </a>
     </p>
     <p align="center">
       <a href="cafeteria">
-        <img src="image/pay/학생식당.png" alt="학생식당" width=40%> 
+        <img src="image/pay/4.png" alt="학생식당" width=40%> 
       </a>
       <a href="store.html">
-        <img src="image/pay/편의점.png" alt="편의점" width=40%> 
+        <img src="image/pay/2.png" alt="편의점" width=40%> 
       </a>
     </p>
     <p class="back" align="center">
