--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="login-box" align="center"> 
         <form action="menu.html" method="GET">
           <input type="text" name="user-id" value="" class="text" placeholder="ID">
-          <input type="password" name="user-password" class="text" placeholder="Password">
+          <input type="password" id="user-password" class="text" placeholder="Password">
           <input type="submit" align="center" value="LOGIN" class="submit"> 
         </form>  
       </div>
