css 추가 및 menu에 추가

--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>menu</title>
+<link href="./css/sidebar.css" rel="stylesheet">
 <style>
 
   table.menu {
@@ -52,6 +53,18 @@
   </style>
 
 
+<input type="checkbox" id="menuicon">
+<label for="menuicon">
+   <span></span>
+ 	<span></span>
+	<span></span>
+</label>
+<div class="sidebar">
+   	<a href="menu.html">메인메뉴</a><br>
+      <a href="charge.html">충전</a><br>
+      <a href="pay.html">결제</a><br>
+      <a href="menu.html">로그아웃</a><br>
+</div>
 
 <div align='center'>
     <br>
