--- a/charge.html
+++ b/charge.html
@@ -5,7 +5,7 @@
       <title>충전</title>
       <style>
       table.menu {
-         width: 1000px;
+         width: 375px;
          border-collapse: separate;
          border-spacing: 1px;
          line-height: 4;
@@ -15,18 +15,32 @@
       }
 
       table.menu th {
-         width: 300px;
+         width: 100px;
          font-weight: bold;
          vertical-align: top;
          border-bottom: 1px solid #ccc;
       }
 
       table.menu td {
-         width: 700px
+         width: 275px
          padding: 10px;
          vertical-align: top;
          border-bottom: 1px solid #ccc;
          text-align: center;
+      }
+
+      div.menu {
+         margin: 0;
+         width: 300px;
+      }
+
+      img{
+         margin-bottom: -3;
+      }
+
+      body{
+         width: 300px;
+         margin: 0;
       }
       </style>
       <link href="./css/sidebar.css" rel="stylesheet">
@@ -46,7 +60,7 @@
       </div>
 
 
-      <div align='center'>
+      <div class="menu" align='center'>
       <table class="menu">
          <tr> <td colspan="2"> <img src="image/ponix/1.png" width="80%"> </td> </tr>
          <tr> <th>내 계좌</th> <td> 우리은행 201238213091</td> </tr>
