--- a/pay.html
+++ b/pay.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>POVI Pay 결제</title>
     <link href="./css/sidebar.css" rel="stylesheet">
-  </head>
-  <body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="css/main.css">
     <style>
       .pay_title
       {
@@ -18,6 +18,8 @@
         font-size : 50px;
       }
     </style>
+  </head>
+  <body>
 
     <input type="checkbox" id="menuicon">
     <label for="menuicon">
@@ -31,26 +33,31 @@
           <a href="pay.html">결제</a><br>
           <a href="menu.html">로그아웃</a><br>
     </div>
-
-    <h1 class="pay_title" align="center">결제 항목 선택</h1>
-    <p align="center">
-      <a href="laundry.html">
-        <img src="image/pay/1.png" alt="세탁기" width=40%>
-      </a>
-      <a href="printer.html">
-        <img src="image/pay/3.PNG" alt="프린터" width=40%>
-      </a>
+    <p class="title" align="center">
+      결제 항목 선택
     </p>
-    <p align="center">
-      <a href="cafeteria">
-        <img src="image/pay/4.PNG" alt="학생식당" width=40%>
-      </a>
-      <a href="store.html">
-        <img src="image/pay/2.PNG" alt="편의점" width=40%>
-      </a>
-    </p>
-    <p class="back" align="center">
-      <a href="menu.html">뒤로가기</a>
-    </p>
+    <hr color="rgb(102, 102, 92)" class="line">
+    <div>
+      <p align="center">
+        <a href="laundry.html">
+          <img src="image/pay/1.png" alt="세탁기" width=150px>
+        </a>
+        <a href="printer.html">
+          <img src="image/pay/3.PNG" alt="프린터" width=150px>
+        </a>
+      </p>
+      <p align="center">
+        <a href="cafeteria">
+          <img src="image/pay/4.PNG" alt="학생식당" width=150px>
+        </a>
+        <a href="store.html">
+          <img src="image/pay/2.PNG" alt="편의점" width=150px>
+        </a>
+      </p>
+      <p align="center">
+        <button type="button" class="button-back" onclick="location.href='./menu.html'" align="right">Back</button>
+      </p>
+    </div>
+    
   </body>
 </html>
