--- a/pay.html
+++ b/pay.html
@@ -47,7 +47,7 @@
         </a>
       </p>
       <p align="center">
-        <a href="cafeteria">
+        <a href="cafeteria.html">
           <img src="image/pay/4.PNG" alt="학생식당" width=150px>
         </a>
         <a href="store.html">
