이름출력기능 사이드메뉴 로그아웃 오류 수정

--- a/charge.html
+++ b/charge.html
@@ -57,7 +57,7 @@
          	<a href="menu.html">메인메뉴</a><br>
             <a href="charge.html">충전</a><br>
             <a href="pay.html">결제</a><br>
-            <a href="menu.html">로그아웃</a><br>
+            <a href="index.html">로그아웃</a><br>
       </div>
 
 
