--- a/menu.html
+++ b/menu.html
@@ -80,6 +80,7 @@
 
 <div align='center'>
     <br>
+    <tr> <img src="image/QRcode.png" width="25%" style="margin-top: -50;"></tr>
     <tr> <hr color="rgb(200,1,80)" class="line"> </tr>
     <tr>
       <p class="title">
