--- a/charge.html
+++ b/charge.html
@@ -23,7 +23,7 @@
       }
 
       table.menu td {
-         width: 275px
+         width: 275px;
          padding: 10px;
          vertical-align: top;
          border-bottom: 1px solid #ccc;
