--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>menu</title>
 <link href="./css/sidebar.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <style>
   table.menu {
      width: 1000px;
@@ -64,6 +65,9 @@
    };
 </script>
 
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
 
 <input type="checkbox" id="menuicon">
 <label for="menuicon">
@@ -95,11 +99,11 @@
 
 
     <div class="container">
-      <button type="button" onclick="location.href='charge.html'" >충전</button>
-      <button type="button" onclick="location.href='pay.html'">결제</button>
+      <button type="button" class="btn btn-primary btn-lg" onclick="location.href='charge.html'" style="margin-right: 16px;">충전</button>
+      <button type="button" class="btn btn-primary btn-lg" onclick="location.href='pay.html'" style="margin-left: 16px;">결제</button>
     </div>
 
-    <button type="button" onclick="location.href='index.html'">로그아웃</button>
+    <button type="button" class="btn btn-danger" onclick="location.href='index.html'">로그아웃</button>
 
     <div align="center" class="footer">
       <img  src="image/POSTECH_로고_02.jpg" alt="POSTECH" width="30%">
