--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,13 @@
 <link href="./css/sidebar.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <style>
+
+  body{
+    background-image: url('image/background_img.jpg');
+    background-size: cover;
+    background-position: center;
+  }
+
   table.menu {
      width: 1000px;
      border-collapse: separate;
@@ -33,7 +40,7 @@
 
   .container{
     width: 270px;
-    background-color: #EEEEF0;
+    background-color: rgba(238, 238, 240, 0.3);
     margin-right: auto;
     margin-left: auto;
     margin-top: 40px;
@@ -50,64 +57,69 @@
   }
 </style>
 
-<script>
-   // 파라메터 정보가 저장될 오브젝트
-   // common.js 같은 모든 페이지에서 로딩되는 js 파일에 넣어두면 됨.
-   var getParam = function(key){
-        var _parammap = {};
-        document.location.search.replace(/\??(?:([^=]+)=([^&]*)&?)/g, function () {
-            function decode(s) {
-                return decodeURIComponent(s.split("+").join(" "));
-            }
-            _parammap[decode(arguments[1])] = decode(arguments[2]);
-        });
-        return _parammap[key];
-   };
-</script>
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
 
-<input type="checkbox" id="menuicon">
-<label for="menuicon">
-   <span></span>
- 	<span></span>
-	<span></span>
-</label>
-<div class="sidebar">
-   	<a href="menu.html">메인메뉴</a><br>
-      <a href="charge.html">충전</a><br>
-      <a href="pay.html">결제</a><br>
-      <a href="index.html">로그아웃</a><br>
-</div>
-
-<div align='center'>
-    <br>
-    <tr> <img src="image/QRcode.png" width="25%" style="margin-top: -50;"></tr>
-    <tr> <hr color="rgb(200,1,80)" class="line"> </tr>
-    <tr>
-      <p class="title">
-         잔액: 10000원
-      </p>
-      <p class="name">
-         ID :
-         <script> document.write(getParam("user-id")); </script>
-      </p>
-   </tr>
-    <tr> <hr color="rgb(200,1,80)" class="line"> </tr>
-
-
-    <div class="container">
-      <button type="button" class="btn btn-primary btn-lg" onclick="location.href='charge.html'" style="margin-right: 16px;">충전</button>
-      <button type="button" class="btn btn-primary btn-lg" onclick="location.href='pay.html'" style="margin-left: 16px;">결제</button>
-    </div>
-
-    <button type="button" class="btn btn-danger" onclick="location.href='index.html'">로그아웃</button>
-
-    <div align="center" class="footer">
-      <img  src="image/POSTECH_로고_02.jpg" alt="POSTECH" width="30%">
-      <br><br>
-    </div>
-
-</div>
+<body>
+  <script>
+    // 파라메터 정보가 저장될 오브젝트
+    // common.js 같은 모든 페이지에서 로딩되는 js 파일에 넣어두면 됨.
+    var getParam = function(key){
+         var _parammap = {};
+         document.location.search.replace(/\??(?:([^=]+)=([^&]*)&?)/g, function () {
+             function decode(s) {
+                 return decodeURIComponent(s.split("+").join(" "));
+             }
+             _parammap[decode(arguments[1])] = decode(arguments[2]);
+         });
+         return _parammap[key];
+    };
+  </script>
+ 
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+ 
+ 
+  <input type="checkbox" id="menuicon">
+  <label for="menuicon">
+      <span></span>
+      <span></span>
+      <span></span>
+  </label>
+  <div class="sidebar">
+        <a href="menu.html">메인메뉴</a><br>
+        <a href="charge.html">충전</a><br>
+        <a href="pay.html">결제</a><br>
+        <a href="index.html">로그아웃</a><br>
+  </div>
+ 
+  <div align='center'>
+      <br>
+      <tr> <img src="image/QRcode.png" width="%" style="margin-top: -50;"></tr>
+      <tr> <hr color="rgb(200,1,80)" class="line"> </tr>
+      <tr>
+       <p class="title">
+          잔액: 10000원
+       </p>
+       <p class="name">
+          ID :
+          <script> document.write(getParam("user-id")); </script>
+       </p>
+      </tr>
+      <tr> <hr color="rgb(200,1,80)" class="line"> </tr>
+ 
+ 
+     <div class="container">
+       <button type="button" class="btn btn-primary btn-lg" onclick="location.href='charge.html'" style="margin-right: 16px;">충전</button>
+       <button type="button" class="btn btn-primary btn-lg" onclick="location.href='pay.html'" style="margin-left: 16px;">결제</button>
+     </div>
+ 
+     <button type="button" class="btn btn-danger" onclick="location.href='index.html'">로그아웃</button>
+ 
+     <div align="center" class="footer">
+       <img  src="image/POSTECH_로고_02.jpg" alt="POSTECH" width="30%">
+       <br><br>
+     </div>
+ 
+ </div>
+  
+</body>
