--- a/menu.html
+++ b/menu.html
@@ -2,13 +2,9 @@
 <title>menu</title>
 <link href="./css/sidebar.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-<style>
+<link rel="stylesheet" href="css/main.css">
 
-  body{
-    background-image: url('image/background_img.jpg');
-    background-size: cover;
-    background-position: center;
-  }
+<style>
 
   table.menu {
      width: 1000px;
@@ -20,23 +16,10 @@
      margin : 10px;
   }
 
-  .line{
-    width: 90%;
-    height: 2px;
-    background-color: rgb(200, 1, 80);
-  }
-
-  .title{
-    font-size: 36px;
-    color: rgb(200,1,80);
-    font-weight: bold;
-  }
-
   .name{
     font-size: 30px;
     color: rgb(0,0,0);
   }
-
 
   .container{
     width: 270px;
