--- a/menu.html
+++ b/menu.html
@@ -3,44 +3,7 @@
 <link href="./css/sidebar.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <link rel="stylesheet" href="css/main.css">
-
-<style>
-
-  table.menu {
-     width: 1000px;
-     border-collapse: separate;
-     border-spacing: 1px;
-     line-height: 4;
-     border-top: 1px solid #ccc;
-     font-size: 50;
-     margin : 10px;
-  }
-
-  .name{
-    font-size: 30px;
-    color: rgb(0,0,0);
-  }
-
-  .container{
-    width: 270px;
-    background-color: rgba(238, 238, 240, 0.3);
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    padding: 40px;
-    text-align: center;
-    border: none ;
-    border-radius: 20px;
-  }
-
-  .footer {
-    position: fixed;
-    bottom: 0px;
-  }
-</style>
-
-
+<link rel="stylesheet" href="css/menu.css">
 
 <body>
   <script>
