--- a/charge.html
+++ b/charge.html
@@ -3,49 +3,19 @@
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <title>충전</title>
-      <style>
-      table.menu {
-         width: 375px;
-         border-collapse: separate;
-         border-spacing: 1px;
-         line-height: 4;
-         border-top: 1px solid #ccc;
-         font-size: 50;
-         margin : 10px;
-      }
-
-      table.menu th {
-         width: 100px;
-         font-weight: bold;
-         vertical-align: top;
-         border-bottom: 1px solid #ccc;
-      }
-
-      table.menu td {
-         width: 275px;
-         padding: 10px;
-         vertical-align: top;
-         border-bottom: 1px solid #ccc;
-         text-align: center;
-      }
-
-      div.menu {
-         margin: 0;
-         width: 300px;
-      }
-
-      img{
-         margin-bottom: -3;
-      }
-
-      body{
-         width: 300px;
-         margin: 0;
-      }
-      </style>
+      <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="css/menu.css">
       <link href="./css/sidebar.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <title>Charge</title>
+
+      <script>
+         function charge(money) {
+            alert(`${money}원을 충전했습니다!`);
+         }
+      </script>
    </head>
+
    <body>
       <input type="checkbox" id="menuicon">
       <label for="menuicon">
@@ -60,15 +30,20 @@
             <a href="index.html">로그아웃</a><br>
       </div>
 
+      <div align='center'>
+         <br>
+         <img src="image/ponix/1.png" width="50%">
+         <hr color="rgb(200,1,80)" class="line">
+         <p class="name"> 우리은행 201238213091 </p>
+         <p class="name">
+         <button type="button" class="btn btn-primary btn-lg" onclick="charge(10000)" style="margin-right: 16px;">10000원 충전하기</button>
+         </p>
+         <p class="name">
+         <button type="button" class="btn btn-primary btn-lg" onclick="charge(30000)" style="margin-right: 16px;">30000원 충전하기</button>
+         </p>
+         <hr color="rgb(200,1,80)" class="line">
 
-      <div class="menu" align='center'>
-      <table class="menu">
-         <tr> <td colspan="2"> <img src="image/ponix/1.png" width="80%"> </td> </tr>
-         <tr> <th>내 계좌</th> <td> 우리은행 201238213091</td> </tr>
-         <tr> <th colspan="2"> <a href="#">10000원 충전하기</a> </th> </tr>
-         <tr> <th colspan="2"> <a href="#">50000원 충전하기</a> </th> </tr>
-      </table>
-      <h1> <p> <a href="menu.html">뒤로가기</a> </p></h1>
+         <button type="button" class="btn btn-danger" onclick="location.href='menu.html'">뒤로가기</button>
       </div>
    </body>
 </html>
