--- a/pay.html
+++ b/pay.html
@@ -43,15 +43,15 @@
           <img src="image/pay/1.png" alt="세탁기" width=150px>
         </a>
         <a href="printer.html">
-          <img src="image/pay/3.PNG" alt="프린터" width=150px>
+          <img src="image/pay/3.png" alt="프린터" width=150px>
         </a>
       </p>
       <p align="center">
         <a href="cafeteria.html">
-          <img src="image/pay/4.PNG" alt="학생식당" width=150px>
+          <img src="image/pay/4.png" alt="학생식당" width=150px>
         </a>
         <a href="store.html">
-          <img src="image/pay/2.PNG" alt="편의점" width=150px>
+          <img src="image/pay/2.png" alt="편의점" width=150px>
         </a>
       </p>
       <p align="center">
